--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/cookie-parser": "^1.4.4",
     "@types/cors": "^2.8.14",
     "@types/express": "^4.17.19",
+    "@types/jsonwebtoken": "^9.0.3",
     "@types/node": "^20.8.6",
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
