--- a/package.json
+++ b/package.json
@@ -8,12 +8,15 @@
     "start": "node src/index.ts"
   },
   "dependencies": {
+    "@aws-sdk/client-sns": "^3.428.0",
+    "@types/aws-sdk": "^2.7.0",
     "@types/bcrypt": "^5.0.0",
     "@types/cookie-parser": "^1.4.4",
     "@types/cors": "^2.8.14",
     "@types/express": "^4.17.19",
     "@types/jsonwebtoken": "^9.0.3",
     "@types/node": "^20.8.6",
+    "@types/otp-generator": "^4.0.0",
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
@@ -21,6 +24,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.6.2",
+    "otp-generator": "^4.0.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
   }
