--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/cookie-parser": "^1.4.4",
     "@types/cors": "^2.8.14",
     "@types/express": "^4.17.19",
+    "@types/ioredis": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.3",
     "@types/node": "^20.8.6",
     "@types/otp-generator": "^4.0.0",
@@ -23,6 +24,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
+    "ioredis": "^5.3.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.6.2",
     "otp-generator": "^4.0.1",
